crates/php-parser/tests/snapshots/integration__declare_incomplete_paren.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php declare(

=== errors ===
expected ')', found end of file
expected statement
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Declare": {
          "directives": [],
          "body": {
            "kind": "Error",
            "span": {
              "start": 15,
              "end": 15
            }
          }
        }
      },
      "span": {
        "start": 6,
        "end": 15
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 15
  }
}
